[package]
name = "kvs3"
version = "0.2.0"
authors = ["h416 <h416@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kvs3"
path = "src/lib.rs"

[dependencies]
warp = "0.2"

tokio = { version = "0.2", features = ["macros"] }

pico-args = "0.3.4"
openssl-probe = "0.1"


rust-s3 = "0.26.3"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

blake3 = "0.3"

log = "0.4"
env_logger = "0.8"
